--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <h1>Titulo Nuevo Modificado!</h1>
+    
     <form action="#" method="get">
-        <input type=""text" name=""firstName" id="firtsName" id ="Firtsname">
+        <input type=""text" name=""firstName" id="firtsName" id ="firtsName">
+        <input type=""text" name=""firstName" id="lastName" id ="lastName">
         <input type="button" value="Enviar">
     </form>
 </body>
