--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <input type="number" name="firstName" id="firtsName" id ="firtsName">
         <input type="text" name="firstName" id="lastName" id ="lastName">
         <input type="number" name ="age" id="age">
+        <img src="#" alt="Test img">
         <input type="button" value="Enviar">
     </form>
 </body>
